# approxik

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  approxik.pc.in  dependencies.md  env.sh  get_dependencies.sh  manifest.xml  related_work.md
approxik/: approxik.hpp
data/: kuka_lbr.urdf  two_link.urdf
data/trajectories/: reaching01.txt  reaching02.txt  reaching03.txt  reaching04.txt
evaluation/: README.md  benchmark_obstacle.py  benchmark_pendulum.py  benchmark_simple_viapoint.py  benchmark_viapoint.py  best_params_pendulum_approxik.npy  best_params_pendulum_exactik.npy  best_params_pendulum_joint.npy  best_params_viapoint_approxik.npy  best_params_viapoint_exactik.npy  best_params_viapoint_joint.npy  camera_config1.txt  dmp_behavior.py  evaluate_obstacle.ipynb  evaluate_pendulum.ipynb  evaluate_viapoint.ipynb  ik_cartesian_dmp_behavior.py  learning_config.yml  obstacle_config.py  obstacle_environment.py  params.txt  pendulum.py  pendulum_config.py  plot_obstacles.py  plot_pendulum.py  plot_pendulum_reward_surface.py  plot_throwing.py  plot_viapoint_reward_surface.py  plot_viapoints.py  results_benchmark_obstacle_approxik.pickle  results_benchmark_obstacle_exactik.pickle  results_benchmark_obstacle_joint.pickle  results_benchmark_pendulum_approxik.pickle  results_benchmark_pendulum_exactik.pickle  results_benchmark_pendulum_joint.pickle  results_benchmark_viapoint_approxik.pickle  results_benchmark_viapoint_exactik.pickle  results_benchmark_viapoint_joint.pickle  simple_viapoint_config.py  throw_config.py  (+4 more)
examples/: README.md  check_failures.py  check_reachability.py  compare_iks.py  convert.py  plot_offset.py  plot_sine.py  plot_spiral.py  plot_straight_lines.py  plot_trajectory.py  utils.py  visualization.py
paper/: .gitignore  README.md  fabisch2016.tex  literature.bib  pouring.xcf
prototype/: test.py
python/: approxik.pxd  approxik.pyx  config.py.in  setup.py
src/: approxik.cpp
test/: test_bound_violation.py  test_characterization.py
